--- a/src/njk/index.html
+++ b/src/njk/index.html
@@ -6,24 +6,39 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-lg-6">
-    <h1>Queen</h1>
+  {% for member in members %}
+    <div class="col-md-3"><a href="{{member.slug}}.html">
+    <div class="card">
+    <img class="card-img-top" src="../assets/img/img/img/members/{{member.imagebw}}">
+    <div class="card-body">
+    <h5 class="card-title">{{member.name}}</h5>
+    <p class="card-text">{{member.instruments}}</p>
+    </a>
     </div>
+    </div>
+    </div>
+    {%endfor%}
   </div>
   <div class="row">
     <div class="col-lg-6">
-    <p>
-      Queen: Albums <a href="detail-page.html">link to detail-page.html</a>
-    </p>
-      <ul> 
+      <h3>Albums</h3>
+      <ul class="list-unstyled">
        {% for disc in discography %}
-  <li>{{ disc.title }}, {{ disc.year }}</li>
+  <li class="media">
+    <img class="mr-3" src="../assets/img/img/img/discs/{{disc.image}}">
+    <div class="media-body">
+      <h5 class="mt-0 mb-1">{{ disc.title }}, {{ disc.year }}</h5>
+    </div>
+  </li>
 {% endfor %}
 </ul>
-     </ul>
     </div>
     <div class="col-lg-4">
-    <p>Queen are a British rock band that formed in London in 1970. Their classic line-up was Freddie Mercury (lead vocals and piano), Brian May (lead guitar and vocals), Roger Taylor (drums and vocals), and John Deacon (bass guitar). Their earliest works were influenced by progressive rock, hard rock and heavy metal, but the band gradually ventured into more conventional and radio-friendly works by incorporating further styles, such as arena rock and pop rock, into their music. </p>
+    <div class="card">
+    <div class ="card-body">
+    <h5 class="card-title">Bio</h5>
+    <p class="card-text">Queen are a British rock band that formed in London in 1970. Their classic line-up was Freddie Mercury (lead vocals and piano), Brian May (lead guitar and vocals), Roger Taylor (drums and vocals), and John Deacon (bass guitar). Their earliest works were influenced by progressive rock, hard rock and heavy metal, but the band gradually ventured into more conventional and radio-friendly works by incorporating further styles, such as arena rock and pop rock, into their music. </p>
+  </div>
   </div>
 </div>
 {% endblock %}
