--- a/src/njk/freddie.html
+++ b/src/njk/freddie.html
@@ -1,3 +1,5 @@
 {% extends '_layouts/detail.njk' %}
 {% block story %}
+{% extends '_layouts/detail.njk' %}
+{% set members = members[0] %}
 {% endblock %}
