--- a/src/njk/index.html
+++ b/src/njk/index.html
@@ -26,14 +26,16 @@
     <h5 class="title">Bio</h5>
     <p class="bio">Queen are a British rock band that formed in London in 1970. Their classic line-up was Freddie Mercury (lead vocals and piano), Brian May (lead guitar and vocals), Roger Taylor (drums and vocals), and John Deacon (bass guitar).</p> <p class="bio">Their earliest works were influenced by progressive rock, hard rock and heavy metal, but the band gradually ventured into more conventional and radio-friendly works by incorporating further styles, such as arena rock and pop rock, into their music. </p>
     <div class="row">
-    <div class="col-lg-6">
-      <h3 class="discography">Albums</h3>
+    <div class="col-md-4">
+      <h3 class="discography">Discography</h3>
       <ul class="list-unstyled">
        {% for disc in discography %}
+       <div class="col-md-4">
   <li class="media" class="discography">
     <img class="mr-3" src="../assets/img/img/img/discs/{{disc.image}}">
     <div class="media-body">
       <h5 class="mt-0 mb-1">{{ disc.title }}, {{ disc.year }}</h5>
+    </div>
     </div>
   </li>
 {% endfor %}
